--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "my_plugins/vim-plugin-AnsiEsc"]
 	path = my_plugins/vim-plugin-AnsiEsc
 	url = https://github.com/powerman/vim-plugin-AnsiEsc.git
+[submodule "my_plugins/vim-visual-increment"]
+	path = my_plugins/vim-visual-increment
+	url = https://github.com/triglav/vim-visual-increment.git
